--- a/data/stories.yml
+++ b/data/stories.yml
@@ -167,3 +167,20 @@ stories:
   steps:
   - intent: goodbye
   - action: utter_goodbye
+
+- story: Try to correct user's misspelling successfull
+  steps:
+  - intent: fix_mispelling
+  - action: action_spelling_check
+  - or:
+      - intent: affirm
+      - intent: mood_great
+      - intent: thanks
+  - action: action_spelling_correction
+
+- story: Try to correct user's misspelling failed
+  steps:
+  - intent: fix_mispelling
+  - action: action_spelling_check
+  - intent: deny
+  - action: utter_ask_rephrase
