--- a/config.yml
+++ b/config.yml
@@ -16,6 +16,7 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: true
+    model_confidence: linear_norm
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
@@ -23,6 +24,8 @@ pipeline:
   - name: FallbackClassifier
     threshold: 0.3
     ambiguity_threshold: 0.1
+    # model_confidence: linear_norm
+  - name: "components.spelling_check.SpellingAnalyzer"
   # - name: EmbeddingIntentClassifier
 
 # Configuration for Rasa Core.
